[package]
name = "cryptopals-challenge17-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = { version = "^0.2.3" }
rand = { version = "^0.8.5" }
base64 = { version = "0.21.2" }
anyhow = { version = "1.0.71" }